--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+   <!-- 스킵 네비게이션 -->
+    <div id="skip">
+        <a href="#cont_nav">전체 메뉴 바로가기</a>
+        <a href="#cont_nav">배너 메뉴 바로가기</a>
+        <a href="#cont_cont">컨텐츠 메뉴 바로가기</a>
+    </div>
+    <!-- //스킵 네비게이션 -->
     <div id="wrap">
         <div id="header">
             <div class="container">header</div>
@@ -36,8 +43,9 @@
             <!-- //cont_cont -->
         </div>
         <!-- //contents -->
-        <div id="footer"></div>
+        <div id="footer">footer</div>
         <!-- //footer -->
     </div>
+    <!-- //wrap -->
 </body>
 </html>
