--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -268,6 +268,45 @@
                         <div class="column col5">
                             <h3><span class="ico_img ir_pm">아이콘</span><span class="ico_tit">Notice</span></h3>
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
+                            <!-- 탭 메뉴 -->
+                            <div class="tab_menu">
+                                <h4 class="ir_su">탭 메뉴</h4>
+                                <ul>
+                                    <li class="active"><a href="#">공지사항1</a>
+                                        <ul>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">첫 번째 공지사항 탭 메뉴 테스트 목록입니다. 첫 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">공지사항2</a>
+                                        <ul style="display: none;">
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">두 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">공지사항3</a>
+                                        <ul style="display: none;">
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                            <li><a href="#">세 번째 공지사항 탭 메뉴 테스트 목록입니다.</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- //탭 메뉴 -->
+                            <!-- 게시판4 -->
+                            <div class="notice4 mt15">
+                                <h4>최신 <em>공지사항</em></h4>
+                                <ul>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리싱 실력은 얼마나인가</a><span>2020.11.06</span>   </li>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리싱 실력은 얼마나인가</a><span>2020.11.06</span></li>
+                                    <li><a href="#">웹 디자이너와 웹 퍼블리싱 실력은 얼마나인가</a><span>2020.11.06</span></li>
+                                </ul>
+                                <a href="#" class="more" title="더보기">더보기</a>
+                            </div>
+                            <!-- //게시판4 -->
                         </div>
                         <!-- //col5 -->
                         <div class="column col6">
