--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -10,6 +10,7 @@
     <!-- CSS Style -->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slick.css">
     <!-- Web Font -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
@@ -119,13 +120,24 @@
             <div id="cont_ban">
                 <div class="container">
                     <div class="ban">
+<!--                       
                         <a href="#" class="prev"><span class="ir_pm">이전 이미지</span></a>
                         <ul>
                             <li class="ban_img1"><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></li>
                             <li class="ban_img2"><a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a></li>
                             <li class="ban_img3"><a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a></li>
                         </ul>
-                        <a href="#" class="next"><span class="ir_pm">다음 이미지</span></a>
+                        <a href="#" class="next"><span class="ir_pm">다음 이미지</span></a> 
+-->
+                        <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+                        <div><a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a></div>
+                        <div><a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a></div>
+                        <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+                        <div><a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a></div>
+                        <div><a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a></div>
+                        <div><a href="#"><img src="img/banner_link1.jpg" alt="웹 표준 지침서 보기"></a></div>
+                        <div><a href="#"><img src="img/banner_link2.jpg" alt="CSS 버튼 만들기"></a></div>
+                        <div><a href="#"><img src="img/banner_link3.jpg" alt="로그인 폼 만들기"></a></div>
                     </div>
                 </div>
             </div>
@@ -419,5 +431,34 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
+    
+    <!-- script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script type="text/javascript">
+        // 배너
+        $(".ban").slick({
+            infinite: true,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            autoplay: true,
+            autoplaySpeed: 3000,
+            dots: true
+        });
+        
+        // 버튼을 클릭하면 전체 메뉴를 보이게 하세요.
+        $(".tit .btn").click(function(e){
+            e.preventDefault();
+            // $("#cont_nav").css("display","block");
+            // #cont_nav {display: block;}
+            // $("#cont_nav").show();
+            // $("#cont_nav").fadeIn();
+            // $("#cont_nav").slideDown();
+            // $("#cont_nav").toggle();
+            // $("#cont_nav").fadeToggle();
+            $("#cont_nav").slideToggle(200);
+            $(this).toggleClass("on");
+        });
+    </script>
 </body>
 </html>
