31 탭메뉴 스크립트

--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -436,6 +436,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script type="text/javascript">
+        //탭메뉴
+        var $tab_list = $(".tab_menu");
+
+        $tab_list.find("ul ul").hide();
+        $tab_list.find("li.active > ul").show();
+
+        function tabMenu(e){
+            e.preventDefault();
+            var $this = $(this);
+            $this.next("ul").show().parent("li").addClass("active").siblings("li").removeClass("active").find(">ul").hide();
+        }
+        $tab_list.find("ul>li>a").click(tabMenu).focus(tabMenu);
+        
         // 배너
         $(".ban").slick({
             infinite: true,
