--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/lightgallery.css">
     <!-- Web Font -->
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
@@ -263,7 +264,13 @@
                                 <ul>
                                     <li class="layer"><a href="#"><img src="img/sban07.jpg" alt="이미지1"></a></li>
                                     <li class="window"><a href="#"><img src="img/sban08.jpg" alt="이미지2"></a></li>
-                                    <li class="last"><a href="#"><img src="img/sban09.jpg" alt="이미지3"></a></li>
+                                    <li class="last lightGallery">
+                                        <a href="img/webstandard3.jpg"><img src="img/sban09.jpg" alt="이미지3"></a>
+                                        <a href="img/webstandard1.jpg" style="display: none;"><img src="img/sban09.jpg" alt="이미지3"></a>
+                                        <a href="img/webstandard2.jpg" style="display: none;"><img src="img/sban09.jpg" alt="이미지3"></a>
+                                        <a href="img/webstandard3.jpg" style="display: none;"><img src="img/sban09.jpg" alt="이미지3"></a>
+                                        <a href="img/webstandard1.jpg" style="display: none;"><img src="img/sban09.jpg" alt="이미지3"></a>
+                                    </li>
                                 </ul>
                             </div>
                             <!-- //팝업 -->
@@ -455,7 +462,14 @@
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/lightgallery.min.js"></script>
+    <script src="js/lightgallery-all.min.js"></script>
     <script type="text/javascript">
+        // 라이트박스
+        $(document).ready(function() {
+            $(".lightGallery").lightGallery();
+        });
+        
         //윈도우 팝업
         $(".window").click(function(e){
             e.preventDefault();
