--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -38,6 +38,8 @@
     <link rel="icon" href="icon/favicon-128.png" sizes="128x128">
 
     <!-- 웹 폰트 -->
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
 
     <!-- HTLM5shiv ie6~8 -->
@@ -82,7 +84,7 @@
             </div>
         </div>
     </header>
-    <!-- header -->
+    <!-- //header -->
     <nav id="nav">
         <div class="container">
             <div class="row">
@@ -142,10 +144,19 @@
             </div>
         </div>
     </nav>
-    <!-- nav -->
-    <article>
-        <h2>반응형 사이트 서브 타이틀</h2>
+    <!-- //nav -->
+    <article id="title">
+        <div class="container">
+            <div class="title">
+                <h2>"나는 퍼블리셔다"</h2>
+                <a href="#" class="btn">
+                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    <span class="ir_su">전체메뉴 보기</span>
+                </a>
+            </div>
+        </div>
     </article>
+    <!-- //title -->
     <main>
         <section>
             <h2>반응형 사이트 컨텐츠</h2>
