--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -164,19 +164,50 @@
                 <section id="cont_left">
                     <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
                     <article class="column col1">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-                        
-                        <!-- // -->
+                        <h4 class="col_tit">Menu</h4>
+                        <p class="col_desc">box-shadow를 이용한 마우스 오버 효과입니다.</p>
+                        <!-- 메뉴 -->
+                        <div class="menu">
+                            <ul>
+                                <li><a href="#">Cafe <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                                <li><a href="#">Tutorial <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                                <li><a href="#">WebSite <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                                <li><a href="#">Reference <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                                <li><a href="#">CSS3 <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                                <li><a href="#">HTML5 <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <!-- //메뉴 -->
                     </article>
                     <!-- //col1 -->
                     <article class="column col2">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-                        
-                        <!-- // -->
+                        <h4 class="col_tit">Notice</h4>
+                        <p class="col_desc">게시판 영역의 한줄 효과와 두줄 효과 게시판입니다.</p>
+                        <!-- 게시판1 -->
+                        <div class="notice1">
+                            <h5>Notice 1</h5>
+                            <ul>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            </ul>
+                            <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- //게시판1 -->
+                        <!-- 게시판2 -->
+                        <div class="notice2 mt15">
+                            <h5>Notice 2</h5>
+                            <ul>
+                                <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                                <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다. 이 줄은 두 줄 효과입니다.</a></li>
+                            </ul>
+                            <a href="#" class="more" title="더 보기">More <i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                        </div>
+                        <!-- //게시판2 -->
                     </article>
                     <!-- //col2 -->
                     <article class="column col3">
