26. 이미지 슬라이드1

--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/slick.css">
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
@@ -230,7 +231,7 @@
                             <div class="img-retina">
                                 <h5>image2</h5>
                             </div>
-                            <p>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</p>
+                            <p>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</p>
                         </div>
                         <!-- //blog2 -->
                     </article>
@@ -239,11 +240,15 @@
                 <section id="cont_center">
                     <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
                     <article class="column col4">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-                        
-                        <!-- // -->
+                        <h4 class="col_tit">SLick Slider</h4>
+                        <p class="col_desc">Slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
+                        <!-- 이미지 슬라이드-->
+                        <div class="slider">
+                            <div><img src="img/slider01.jpg" alt="이미지1"></div>
+                            <div><img src="img/slider02.jpg" alt="이미지2"></div>
+                            <div><img src="img/slider03.jpg" alt="이미지3"></div>
+                        </div>
+                        <!-- //이미지 슬라이드 -->
                     </article>
                     <!-- //col4 -->
                     <article class="column col5">
@@ -309,5 +314,7 @@
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/metatag.js"></script>
     <script src="js/modernizr-custom.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 </html>
