--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -244,9 +244,24 @@
                         <p class="col_desc">Slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
                         <!-- 이미지 슬라이드-->
                         <div class="slider">
-                            <div><img src="img/slider01.jpg" alt="이미지1"></div>
-                            <div><img src="img/slider02.jpg" alt="이미지2"></div>
-                            <div><img src="img/slider03.jpg" alt="이미지3"></div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider01.jpg" alt="이미지1">
+                                    <figcaption><em>Responisve Site1</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드</span></figcaption>
+                                </figure>   
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider02.jpg" alt="이미지2">
+                                    <figcaption><em>Responisve Site2</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드</span></figcaption>
+                                </figure>   
+                            </div>
+                            <div>
+                                <figure>
+                                    <img src="img/slider03.jpg" alt="이미지3">
+                                    <figcaption><em>Responisve Site3</em><span>슬라이드 플러그인을 이용한 반응형 이미지 슬라이드</span></figcaption>
+                                </figure>   
+                            </div>
                         </div>
                         <!-- //이미지 슬라이드 -->
                     </article>
