--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -287,11 +287,18 @@
                     </article>
                     <!-- //col5 -->
                     <article class="column col6">
-                        <h4 class="col_tit">Title</h4>
-                        <p class="col_desc">이 곳은 설명 부분입니다.</p>
-                        <!-- -->
-                        
-                        <!-- // -->
+                        <h4 class="col_tit">Video</h4>
+                        <p class="col_desc">반응형 영상을 보여주는 영역입니다.</p>
+                        <!-- video -->
+                        <!--
+                        <video autopaly="autoplay" controls="controls" loop="loop">
+                            <source src="img/video.mp4" type="video/mp4">
+                        </video>
+                        -->
+                        <div class="video">
+                            <iframe src="https://www.youtube.com/embed/tHy498wdPaA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <!-- //video -->
                     </article>
                     <!-- //col6 -->
                 </section>
