높낮이 맞출겸 블로그 수정

--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -220,7 +220,8 @@
                         <div class="blog1">
                             <h5 class="ir_su">image1</h5>
                             <figure>
-                                <img src="img/blog1_@1.jpg" class="img-normal" alt="normal image">
+                                <!-- <img src="img/blog1_@1.jpg" class="img-normal" alt="normal image">
+                                <img src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%"> -->
                                 <img src="img/blog3_@1.jpg" srcset="img/blog3_@1.jpg 1x, img/blog3_@2.jpg 2x, img/blog3_@3.jpg 3x" alt="이미지">
                                 <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
                             </figure>
