--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -347,7 +347,26 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <h2>반응형 사이트 푸터</h2>
+            <ul>
+                <li><a href="#">사이트 도움말</a></li>
+                <li><a href="#">사이트 이용약관</a></li>
+                <li><a href="#">사이트 운영규칙</a></li>
+                <li><a href="#"><strong>개인정보취급방침</strong></a></li>
+                <li><a href="#">책임의 한계와 법적고지</a></li>
+                <li><a href="#">게시중단요청 서비스</a></li>
+                <li><a href="#">고객센터</a></li>
+            </ul>
+            <address>
+                Copyright&copy;@webstroyboy.co.kr All Right ReServed
+            </address>
+            <div class="w3c">
+                <a href="http://validator.w3.org/check?uri=referer">
+                    <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+                </a>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="올바른 CSS입니다!" />
+                </a>
+            </div>
         </div>
     </footer>
     <!-- //footer -->
