--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -153,7 +153,7 @@
             <div class="title">
                 <h2>"나는 퍼블리셔다"</h2>
                 <a href="#" class="btn">
-                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
                     <span class="ir_su">전체메뉴 보기</span>
                 </a>
             </div>
@@ -347,25 +347,29 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <ul>
-                <li><a href="#">사이트 도움말</a></li>
-                <li><a href="#">사이트 이용약관</a></li>
-                <li><a href="#">사이트 운영규칙</a></li>
-                <li><a href="#"><strong>개인정보취급방침</strong></a></li>
-                <li><a href="#">책임의 한계와 법적고지</a></li>
-                <li><a href="#">게시중단요청 서비스</a></li>
-                <li><a href="#">고객센터</a></li>
-            </ul>
-            <address>
-                Copyright&copy;@webstroyboy.co.kr All Right ReServed
-            </address>
-            <div class="w3c">
-                <a href="http://validator.w3.org/check?uri=referer">
-                    <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
-                </a>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                    <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="올바른 CSS입니다!" />
-                </a>
+            <div class="row">
+                <div class="footer">
+                    <ul>
+                        <li><a href="#">사이트 도움말</a></li>
+                        <li><a href="#">사이트 이용약관</a></li>
+                        <li><a href="#">사이트 운영규칙</a></li>
+                        <li><a href="#"><strong>개인정보취급방침</strong></a></li>
+                        <li><a href="#">책임의 한계와 법적고지</a></li>
+                        <li><a href="#">게시중단요청 서비스</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                    <address>
+                        Copyright&copy;@webstroyboy.co.kr All Right ReServed
+                    </address>
+                    <div class="w3c">
+                        <a href="http://validator.w3.org/check?uri=referer">
+                            <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+                        </a>
+                        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="올바른 CSS입니다!" />
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
