34-36 사이드 이펙트

--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -309,9 +309,12 @@
                         <p class="col_desc">CSS의 transform을 이용한 마우스 오버 효과입니다.</p>
                         <!-- side1 -->
                         <div class="side1">
-                            <figure>
+                            <figure class="front">
                                 <img src="img/side1.jpg" alt="이미지1">
                             </figure>
+                            <div class="back">
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            </div>
                         </div>
                         <!-- //side1 -->
                     </article>
@@ -319,10 +322,19 @@
                     <article class="column col8">
                         <h4 class="col_tit">Effect2</h4>
                         <p class="col_desc">CSS의 transform을 이용한 마우스 오버 효과입니다.</p>
-                        <!-- side1 -->
+                        <!-- side2 -->
                         <div class="side2">
-                            <figure>
+                            <figure class="front">
                                 <img src="img/side2.jpg" alt="이미지2">
+                                <figcaption>
+                                    <h3>Hover Effect</h3>
+                                </figcaption>
+                            </figure>
+                            <figure class="back">
+                                <img src="img/side4.jpg" alt="이미지4">
+                                <figcaption>
+                                    <h3>Hover Effect</h3>
+                                </figcaption>
                             </figure>
                         </div>
                         <!-- //side2 -->
@@ -332,9 +344,12 @@
                         <h4 class="col_tit">Effect3</h4>
                         <p class="col_desc">CSS의 transform을 이용한 마우스 오버 효과입니다.</p>
                         <!-- side3 -->
-                        <div class="side1">
+                        <div class="side3">
                             <figure>
                                 <img src="img/side3.jpg" alt="이미지3">
+                                <figcaption>
+                                    <h3>Hover<em>Effect</em></h3>
+                                </figcaption>
                             </figure>
                         </div>
                         <!-- //side3 -->
