--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -71,7 +71,36 @@
         </div>
     </header>
     <!-- header -->
-    <article id="title"></article>
+    <section id="banner">
+        <h2 class="ir_so">최신 영화 소식</h2>
+        <div class="banner-menu">
+            <div class="container">
+                <div class="row">
+                    <div class="bm_left">
+                        <ul>
+                            <li class="total"><a href="#">전체메뉴</a></li>
+                            <li class="line"><a href="#">필름 소사이어티</a></li>
+                            <li><a href="#">클래식 소사이어티</a></li>
+                        </ul>
+                    </div>
+                    <div class="bm_right">
+                        <ul>
+                            <li class="line"><a href="#">고객센터</a></li>
+                            <li class="line"><a href="#">멤버쉽</a></li>
+                            <li><a href="#">VIP</a></li>
+                        </ul>
+                        <ul>
+                            <li class="white"><a href="#">상영시간표</a></li>
+                            <li class="purple"><a href="#">빠른 예매</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="banner-slider">
+            <img src="img/main_slider01.jpg" alt="베스와 베라">
+        </div>
+    </section>
     <main>
         <section id="contents">
             <div class="display"></div>
