IR효과 클래스명 수정

--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="nav">
-                    <h2 class="ir_su">반응형 사이트 전체 메뉴</h2>
+                    <h2 class="ir_so">반응형 사이트 전체 메뉴</h2>
                     <div>
                         <h3>HTML Reference</h3>
                         <ol>
@@ -154,7 +154,7 @@
                 <h2>"나는 퍼블리셔다"</h2>
                 <a href="#" class="btn">
                     <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
-                    <span class="ir_su">전체메뉴 보기</span>
+                    <span class="ir_so">전체메뉴 보기</span>
                 </a>
             </div>
         </div>
@@ -163,9 +163,9 @@
     <main>
         <section id="contents">
             <div class="container">
-                <h2 class="ir_su">반응형 사이트 컨텐츠</h2>
+                <h2 class="ir_so">반응형 사이트 컨텐츠</h2>
                 <section id="cont_left">
-                    <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
+                    <h3 class="ir_so">반응형 사이트 왼쪽 컨텐츠</h3>
                     <article class="column col1">
                         <h4 class="col_tit">Menu</h4>
                         <p class="col_desc">box-shadow를 이용한 마우스 오버 효과입니다.</p>
@@ -218,7 +218,7 @@
                         <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법입니다.</p>
                         <!-- blog1 -->
                         <div class="blog1">
-                            <h5 class="ir_su">image1</h5>
+                            <h5 class="ir_so">image1</h5>
                             <figure>
                                 <!-- <img src="img/blog1_@1.jpg" class="img-normal" alt="normal image">
                                 <img src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%"> -->
@@ -239,7 +239,7 @@
                     <!-- //col3 -->
                 </section>
                 <section id="cont_center">
-                    <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
+                    <h3 class="ir_so">반응형 사이트 가운데 컨텐츠</h3>
                     <article class="column col4">
                         <h4 class="col_tit">SLick Slider</h4>
                         <p class="col_desc">Slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
@@ -303,7 +303,7 @@
                     <!-- //col6 -->
                 </section>
                 <section id="cont_right">
-                    <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
+                    <h3 class="ir_so">반응형 사이트 오른쪽 컨텐츠</h3>
                     <article class="column col7">
                         <h4 class="col_tit">Effect1</h4>
                         <p class="col_desc">CSS의 transform을 이용한 마우스 오버 효과입니다.</p>
