--- a/WebStandard/index.html
+++ b/WebStandard/index.html
@@ -52,7 +52,7 @@
         <div id="contents">
             <div id="cont_nav">
                 <div class="container">
-                    <h2 class="ir_su">전체 메뉴</h2>
+                    <h2 class="ir_so">전체 메뉴</h2>
                     <div class="nav">
                         <div>
                             <h3>HTML Reference</h3>
@@ -223,12 +223,12 @@
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
                             <!-- 로그인 -->
                             <div id="login-wrap">
-                                <h4 class="ir_su">로그인 정보</h4>
+                                <h4 class="ir_so">로그인 정보</h4>
                                 <form id="login_form" name="login_form" action="post">
                                     <fieldset>
-                                        <legend class="ir_su">로그인 및 관련 설정</legend>
+                                        <legend class="ir_so">로그인 및 관련 설정</legend>
                                         <div class="login_header">
-                                            <h5 class="ir_su">로그인 보안</h5>
+                                            <h5 class="ir_so">로그인 보안</h5>
                                             <div class="lh_check">
                                                 <input id="infor_check" type="checkbox" class="input_check">
                                                 <label for="infor_check">로그인 상태 유지</label>
@@ -238,17 +238,17 @@
                                             </div>
                                         </div>
                                         <div class="login_content">
-                                            <h5 class="ir_su">로그인 영역</h5>
+                                            <h5 class="ir_so">로그인 영역</h5>
                                             <div class="lc_text">
-                                                <label for="uid" class="ir_su">아이디</label>
+                                                <label for="uid" class="ir_so">아이디</label>
                                                 <input type="text" id="uid" name="uid" class="input_text" maxlength="20" placeholder="아이디">
-                                                <label for="upw" class="ir_su">비밀번호</label>
+                                                <label for="upw" class="ir_so">비밀번호</label>
                                                 <input type="password" id="upw" name="upw" class="input_text" maxlength="20" placeholder="비밀번호">
                                             </div>
                                             <button class="lc_btn" type="submit">로그인</button>
                                         </div>
                                         <div class="login_footer">
-                                            <h5 class="ir_su">로그인 문제해결</h5>
+                                            <h5 class="ir_so">로그인 문제해결</h5>
                                             <ul>
                                                 <li><a href="#"><strong>회원가입</strong></a> / </li>
                                                 <li><a href="#">아이디</a>&middot;<a href="#">비밀번호 찾기</a></li>
@@ -306,7 +306,7 @@
                             <!-- //오버효과1 -->
                             <!-- 오버효과2 -->
                             <div class="notice_hover2 mt15">
-                                <h4 class="ir_su">Mouse Hover</h4>
+                                <h4 class="ir_so">Mouse Hover</h4>
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -336,7 +336,7 @@
                             <p class="ico_desc">가장 웹 페이지에서 기본이 되는 게시판 유형입니다.</p>
                             <!-- 탭 메뉴 -->
                             <div class="tab_menu">
-                                <h4 class="ir_su">탭 메뉴</h4>
+                                <h4 class="ir_so">탭 메뉴</h4>
                                 <ul>
                                     <li class="active"><a href="#">공지사항1</a>
                                         <ul>
@@ -423,7 +423,7 @@
         <!-- //contents -->
         <div id="footer">
             <div class="container">
-                <h2 class="ir_su">푸터 영역</h2>
+                <h2 class="ir_so">푸터 영역</h2>
                 <div class="footer">
                     <ul>
                         <li><a href="#">사이트 도움말</a></li>
