--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/swiper.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     
     <!-- 파비콘 -->
     <link rel="shortcut icon" href="icons/favicon.ico">
@@ -83,7 +84,7 @@
                 <div class="row">
                     <div class="bm_left">
                         <ul>
-                            <li class="total"><a href="#">전체메뉴</a></li>
+                            <li class="total"><a href="#"><i class="fa fa-bars" aria-hidden="true"></i> 전체메뉴</a></li>
                             <li class="line"><a href="#">필름 소사이어티</a></li>
                             <li><a href="#">클래식 소사이어티</a></li>
                         </ul>
@@ -108,8 +109,8 @@
                     <div class="swiper-slide ss1">
                         <div class="container">
                             <div class="row">
-                                <h3>어벤져스 : 앤드게임</h3>
-                                <p>역대 최단 기간 1000만 관객 돌파 기록 </p>
+                                <h3>캡틴 마블<em>Captain Marvel</em></h3>
+                                <p>새로운 히어로, 어벤져스의 희망 </p>
                             </div>
                         </div>
                     </div>
