--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </header>
-    <!-- header -->
+    <!-- //header -->
     <section id="banner">
         <h2 class="ir_so">최신 영화 소식</h2>
         <div class="banner-menu">
@@ -134,6 +134,104 @@
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </section>
+    <!-- //banner -->
+    <section id="movie">
+        <div class="container">
+            <div class="row">
+                <div class="movie">
+                    <h2 class="ir_so">최신 영화 정보</h2>
+                    <div class="movie_title">
+                        <ul>
+                            <li class="active"><a href="#">박스오피스</a></li>
+                            <li><a href="#">최신개봉작</a></li>
+                            <li><a href="#">상영예정작</a></li>
+                            <li><a href="#">큐레이션</a></li>
+                        </ul>
+                    </div>
+                    <div class="movie_chart">
+                        <div class="chart_cont1">
+                            <div>
+                                <div class="poster">
+                                    <figure>
+                                        <img src="img/poster01.jpg" srcset="img/poster01@2.jpg 2x" alt="">
+                                    </figure>
+                                    <div class="rank"><strong>1</strong></div>
+                                    <div class="mx">
+                                        <span class="icon m ir_pm">MX</span>
+                                        <span class="icon b ir_pm">Boutique</span>
+                                    </div>
+                                </div>
+                                <div class="infor">
+                                    <h3><span class="icon all ir_pm">전체관람가</span> <strong>침묵</strong></h3>
+                                    <div class="infor_btn">
+                                        <a href="#">상세보기</a>
+                                        <a href="#">예매하기</a>
+                                    </div>
+                                </div>    
+                            </div>
+                            <div>
+                                <div class="poster">
+                                    <figure>
+                                        <img src="img/poster02.jpg" srcset="img/poster02@2.jpg 2x" alt="">
+                                    </figure>
+                                    <div class="rank"><strong>2</strong></div>
+                                    <div class="mx">
+                                        <span class="icon m ir_pm">MX</span>
+                                        <span class="icon b ir_pm">Boutique</span>
+                                    </div>
+                                </div>
+                                <div class="infor">
+                                    <h3><span class="icon a19 ir_pm">전체관람가</span> <strong>침묵</strong></h3>
+                                    <div class="infor_btn">
+                                        <a href="#">상세보기</a>
+                                        <a href="#">예매하기</a>
+                                    </div>
+                                </div>
+                            </div>    
+                            <div>
+                                <div class="poster">
+                                    <figure>
+                                        <img src="img/poster03.jpg" srcset="img/poster03@2.jpg 2x" alt="">
+                                    </figure>
+                                    <div class="rank"><strong>3</strong></div>
+                                    <div class="mx">
+                                        <span class="icon m ir_pm">MX</span>
+                                        <span class="icon b ir_pm">Boutique</span>
+                                    </div>
+                                </div>
+                                <div class="infor">
+                                    <h3><span class="icon a15 ir_pm">전체관람가</span> <strong>침묵</strong></h3>
+                                    <div class="infor_btn">
+                                        <a href="#">상세보기</a>
+                                        <a href="#">예매하기</a>
+                                    </div>
+                                </div>
+                            </div>    
+                            <div>
+                                <div class="poster">
+                                    <figure>
+                                        <img src="img/poster04.jpg" srcset="img/poster04@2.jpg 2x" alt="">
+                                    </figure>
+                                    <div class="rank"><strong>4</strong></div>
+                                    <div class="mx">
+                                        <span class="icon m ir_pm">MX</span>
+                                        <span class="icon b ir_pm">Boutique</span>
+                                    </div>
+                                </div>
+                                <div class="infor">
+                                    <h3><span class="icon a12 ir_pm">전체관람가</span> <strong>침묵</strong></h3>
+                                    <div class="infor_btn">
+                                        <a href="#">상세보기</a>
+                                        <a href="#">예매하기</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>      
+                    </div>
+                </div>
             </div>
         </div>
     </section>
