배너 이미지 수정

--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -109,24 +109,24 @@
                     <div class="swiper-slide ss1">
                         <div class="container">
                             <div class="row">
-                                <h3>캡틴 마블<em>Captain Marvel</em></h3>
-                                <p>새로운 히어로, 어벤져스의 희망 </p>
+                                <h3>테넷<em>Tenet</em></h3>
+                                <p>&lt;인터스텔라&gt; &lt;인셉션&gt;에 이은 크리스토퍼 놀란 감독의 신작</p>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide ss2">
                         <div class="container">
                             <div class="row">
-                                <h3>어벤져스 : 앤드게임</h3>
-                                <p>역대 최단 기간 1000만 관객 돌파 기록 </p>
+                                <h3>더 프롬</h3>
+                                <p>넷플릭스 뮤지컬 영화, 메가박스에 상륙</p>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide ss3">
                         <div class="container">
                             <div class="row">
-                                <h3>어벤져스 : 앤드게임</h3>
-                                <p>역대 최단 기간 1000만 관객 돌파 기록 </p>
+                                <h3>삼진그룹 영어토익반</h3>
+                                <p>개봉 2주만에 100만 관객 돌파</p>
                             </div>
                         </div>
                     </div>
