10 영화 차트 이미지 슬라이드 반응형

--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="row">
                 <div class="movie">
-                    <h2 class="ir_so">최신 영화 정보</h2>
+                    <h2 class="ir_so">영화 예매</h2>
                     <div class="movie_title">
                         <ul>
                             <li class="active"><a href="#">박스오피스</a></li>
@@ -185,7 +185,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>삼진그룹 영어..</strong></h3>
+                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>삼진그룹 영어토익반</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -342,7 +342,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon a15 ir_pm">15세관람가</span> <strong>그리고 우린 춤..</strong></h3>
+                                        <h3><span class="icon a15 ir_pm">15세관람가</span> <strong>그리고 우린 춤을 추었다</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -418,7 +418,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon all ir_pm">전체관람가</span> <strong>피아니스트의..</strong></h3>
+                                        <h3><span class="icon all ir_pm">전체관람가</span> <strong>피아니스트의 마지막 인터뷰</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -537,7 +537,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>내언니전지현과..</strong></h3>
+                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>내언니전지현과 나</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -561,7 +561,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon a15 ir_pm">15세관람가</span> <strong>그리고 우린 춤..</strong></h3>
+                                        <h3><span class="icon a15 ir_pm">15세관람가</span> <strong>그리고 우린 춤을 추었다</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -599,7 +599,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon all ir_pm">전체관람가</span> <strong>피아니스트의..</strong></h3>
+                                        <h3><span class="icon all ir_pm">전체관람가</span> <strong>피아니스트의 마지막 인터뷰</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
@@ -618,7 +618,7 @@
                                         </div>
                                     </div>
                                     <div class="infor">
-                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>내언니전지현과..</strong></h3>
+                                        <h3><span class="icon a12 ir_pm">12세관람가</span> <strong>내언니전지현과 나</strong></h3>
                                         <div class="infor_btn">
                                             <a href="#">상세보기</a>
                                             <a href="#">예매하기</a>
