11 이벤트 영역

--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -671,10 +671,33 @@
             </div>
         </div>
     </section>
+    <!-- //movie -->
+    <section id="event">
+        <div class="container">
+            <div class="row">
+                <div class="event">
+                    <h2>새로운 이벤트</h2>
+                    <div class="event_left">
+                        <div class="event_slider">
+                            <img src="img/event01.jpg" srcset="img/event01@2.jpg" alt="시티 패키지">    
+                        </div>
+                        <div class="event_box1">
+                            <img src="img/event02.jpg" srcset="img/event02@2.jpg" alt="남포항점 2019 시즌할인권">
+                        </div>
+                        <div class="event_box2">
+                            <img src="img/event03.jpg" srcset="img/event03@2.jpg" alt="설 선물 이수점 전용 관람권 런칭">
+                        </div>
+                    </div>
+                    <div class="event_right">
+                        <img src="img/event04.jpg" srcset="img/event04@2.jpg" alt="사표 대신 영화표">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //event -->
     <main>
         <section id="contents">
-            <div class="display"></div>
-            <div class="event"></div>
             <div class="opening"></div>
             <div class="new"></div>
             <div>
