16 메가박스 할인카드

--- a/MegaBox/index.html
+++ b/MegaBox/index.html
@@ -869,7 +869,34 @@
                             </ul>
                         </div>
                     </article>
-                    <article class="help_box2">2</article>
+                    <article class="help_box2">
+                        <h3>메가박스 할인카드</h3>
+                        <div class="card">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <span><img src="img/card01.jpg" srcset="img/card01@2.jpg 2x" alt="card01"></span>
+                                        <strong>T멤버십 일반</strong>
+                                        <em>영화 2,000원 현장 즉시 할인(1인 5매)</em>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span><img src="img/card02.jpg" srcset="img/card02@2.jpg 2x" alt="card02"></span>
+                                        <strong>리디 신한카드</strong>
+                                        <em>영화 4,000원 결제일 할인(통합 월 1회)</em>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span><img src="img/card03.jpg" srcset="img/card03@2.jpg 2x" alt="card03"></span>
+                                        <strong>청춘대로 꿀잼a카드</strong>
+                                        <em>영화 4,000원 청구 할인(연 2회, 연 8회)</em>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </article>
                     <article class="help_box3">3</article>
                 </div>
             </div>
