--- a/ResponsiveWeb/index.html
+++ b/ResponsiveWeb/index.html
@@ -44,6 +44,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap" rel="stylesheet">
 
     <!-- HTLM5shiv ie6~8 -->
     <!--[if lt IE 9]> 
@@ -65,7 +66,7 @@
                     </div>
                     <!-- //header_menu -->
                     <div class="header_title">
-                        <h1>Professional Web Publisher</h1><br>
+                        <h1>BASIC RESPONSIVE WEB</h1><br>
                         <a href="https://github.com/sryung1225">github.com/sryung1225</a>
                     </div>
                     <!-- //header_title -->
